Added some javascript to scroll if url has # and to not scroll if it doesnt

--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -37,7 +37,7 @@
         		<ul>
                     <li><a href="#testimonials">Testimonials</a></li> <!--you can edit-->
                     <li><a href="#sectionprices">Prices</a></li> <!--you can edit-->
-                    <li><a href="http://google.com">Works</a></li> <!--you can edit-->
+                    <li><a href="/">Home</a></li> <!--you can edit-->
                 </ul>    
             </nav>
         </div>
@@ -66,179 +66,7 @@
     
 </header>
 <!--end navigationmenu--><!--start sectionslide-->
-<section id="sectionslide">
-	
-	<div class="topwaves"></div> <!--top waves-->
-    
-    <div class="fullwidthbanner-container">
-        <div class="fullwidthbanner">
-            <ul>
-                
-                <!-- THE FIRST SLIDE -->
-                <li data-transition="random" data-slotamount="10" data-masterspeed="300" data-delay="6100">     
-                    <img alt="" src="assets/section-slide/1/slide1.jpg" >
-        
-                    <div class="caption randomrotate"
-                         data-x="353"
-                         data-y="168"
-                         data-speed="300"
-                         data-start="1500"
-                         data-easing="easeOutExpo" data-end="3800" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/1/welcome-1.png" alt="">
-                    </div>
-    
-                    <div class="caption randomrotate"
-                         data-x="178"
-                         data-y="275"
-                         data-speed="300"
-                         data-start="1700"
-                         data-easing="easeOutExpo" data-end="4000" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/1/to-2.png" alt="">
-                    </div>
-                    
-                     <div class="caption randomrotate"
-                         data-x="267"
-                         data-y="275"
-                         data-speed="300"
-                         data-start="1900"
-                         data-easing="easeOutExpo" data-end="4200" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/1/sweet-3.png" alt="">
-                    </div>
-                    
-                     <div class="caption randomrotate"
-                         data-x="449"
-                         data-y="275"
-                         data-speed="300"
-                         data-start="2100"
-                         data-easing="easeOutExpo" data-end="4400" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/1/cake-4.png" alt="">
-                    </div>
-                    
-                     <div class="caption randomrotate"
-                         data-x="603"
-                         data-y="275"
-                         data-speed="300"
-                         data-start="2300"
-                         data-easing="easeOutExpo" data-end="4600" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/1/theme-5.png" alt="">
-                    </div>
-                </li>
-                <!--END FIRST SLDIE-->
-        
-                
-                <!--THE SECOND SLIDE -->
-                <li data-transition="random" data-slotamount="15" data-masterspeed="300" data-delay="7800">       
-                    <img alt="" src="assets/section-slide/2/slide2.jpg" >
-    
-                    <div class="caption randomrotate"
-                         data-x="348"
-                         data-y="168"
-                         data-speed="300"
-                         data-start="1500"
-                         data-easing="easeOutExpo" data-end="3400" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/2/awesome-1.png" alt="">
-                    </div>
-    
-                    <div class="caption randomrotate"
-                         data-x="246"
-                         data-y="275"
-                         data-speed="300"
-                         data-start="1700"
-                         data-easing="easeOutExpo" data-end="3600" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/2/responsive-2.png" alt="">
-                    </div>
-                    
-                    <div class="caption randomrotate"
-                         data-x="566"
-                         data-y="275"
-                         data-speed="300"
-                         data-start="1900"
-                         data-easing="easeOutExpo" data-end="3800" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/2/slider-3.png" alt="">
-                    </div>
-                    
-                    
-                    <div class="caption randomrotate"
-                         data-x="406"
-                         data-y="168"
-                         data-speed="300"
-                         data-start="4000"
-                         data-easing="easeOutExpo" data-end="5900" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/2/with-4.png" alt="">
-                    </div>
-    
-                    <div class="caption randomrotate"
-                         data-x="252"
-                         data-y="275"
-                         data-speed="300"
-                         data-start="4200"
-                         data-easing="easeOutExpo" data-end="6100" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/2/many-5.png" alt="">
-                    </div>
-                    
-                    <div class="caption randomrotate"
-                         data-x="436"
-                         data-y="275"
-                         data-speed="300"
-                         data-start="4400"
-                         data-easing="easeOutExpo" data-end="6300" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/2/transitions-6.png" alt="">
-                    </div>
-                </li>
-                <!--END SECOND SLIDE-->
-                
-                
-                <!--THE THIRD SLIDE -->
-                <li data-transition="random" data-slotamount="15" data-masterspeed="300" data-delay="6500">       
-                    <img alt="" src="assets/section-slide/3/slide3.jpg" >
-    
-                    <div class="caption randomrotate"
-                         data-x="205"
-                         data-y="168"
-                         data-speed="300"
-                         data-start="1500"
-                         data-easing="easeOutExpo" data-end="4000" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/3/the-1.png" alt="">
-                    </div>
-    
-                    <div class="caption randomrotate"
-                         data-x="324"
-                         data-y="168"
-                         data-speed="300"
-                         data-start="1700"
-                         data-easing="easeOutExpo" data-end="4200" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/3/best-2.png" alt="">
-                    </div>
-                    
-                    <div class="caption randomrotate"
-                         data-x="464"
-                         data-y="168"
-                         data-speed="300"
-                         data-start="1900"
-                         data-easing="easeOutExpo" data-end="4400" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/3/promotion-3.png" alt="">
-                    </div>
-                    
-                    
-                    <div class="caption randomrotate"
-                         data-x="215"
-                         data-y="275"
-                         data-speed="300"
-                         data-start="2100"
-                         data-easing="easeOutExpo" data-end="4600" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/3/for-4.png" alt="">
-                    </div>
-    
-                    <div class="caption randomrotate"
-                         data-x="333"
-                         data-y="275"
-                         data-speed="300"
-                         data-start="2300"
-                         data-easing="easeOutExpo" data-end="4800" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/3/your-5.png" alt="">
-                    </div>
-                    
-                    <div class="caption randomrotate"
-                         data-x="497"
-                         data-y="275"
-                         data-speed="300"
-                         data-start="2500"
-                         data-easing="easeOutExpo" data-end="5000" data-endspeed="300" data-endeasing="easeInSine"><img src="assets/section-slide/3/business-6.png" alt="">
-                    </div>
-                </li>
-                <!--END THIRD SLIDE-->
 
-            </ul>
-        </div>
-    </div>
-    
-      
-</section>
-<!--end sectionslide--><!--start services-->
 <section id="services">
 
 	<div class="bottomwaves"></div> <!--need for slide-->
