--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -211,7 +211,7 @@ nav a:hover{
 #testimonials{
 	width:100%;
 	float:left;
-	background-image:url(./patterns/pink-bg.png);
+	background-image:url(./patterns/purp-bg.png);
 	background-repeat:repeat;
 	background-attachment:fixed;
 }
