--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -1,4 +1,3 @@
-show.html.erb
 <!DOCTYPE html>
 <!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
 <!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
@@ -45,7 +44,7 @@ show.html.erb
         
         <!--start logo-->
         <div class="grid_2 logo">
-        	<img alt="" src="assets/logo.png" /> <!--Include your logo with size 180px X 239 px-->
+        	<img alt="" src="../assets/logo.png" /> <!--Include your logo with size 180px X 239 px-->
         </div>
         <!--end logo-->
         
@@ -76,37 +75,11 @@ show.html.erb
     
     	<!--start titlesection-->
         <div class="grid_12 titlesection">
-        	<h1>Services We Provide</h1>
+        	<h1>Some Works</h1>
         </div>
         <!--end title section-->
         
         <!--start our services-->
-        
-        <!--Service-->
-        <div class="grid_4">
-        	<img class="rotate" alt="" src="assets/section-services/service1.png" /> <!-- You can find the service icons in vector format in psd attachment.-->
-            <h2>Cake Design</h2> <!--you can edit-->
-            <p>We take the time to ensure that the look of the cake is perfection!</p> <!--you can edit-->
-        </div>
-        <!--Service-->
-        
-        <!--Service-->
-        <div class="grid_4">
-        	<img class="rotate" alt="" src="assets/section-services/service2.png" />
-            <h2>Cupcakes</h2>
-            <p>We do cakes, cookies, and cupcakes.</p>
-        </div>
-        <!--Service-->
-        
-        <!--Service-->
-        <div class="grid_4">
-        	<img class="rotate" alt="" src="assets/section-services/service5.png" />
-            <h2>Awesome Recipes</h2>
-            <p>Not only do our products look awesome, they taste great.</p>
-        </div>
-        <!--Service-->
-        
-        <!--end our services-->
     
     </div>
     <!--end container-->   
@@ -114,100 +87,18 @@ show.html.erb
 </section>
 <!--end services--><!--start testimonials-->
 <section id="testimonials">
-	
-    <!--start anchors-->
-    <div class="anchors">
-    	<div class="contanchors">
-            <a href="#services"><img class="anchortop" alt="" src="assets/anchors/toptestimonials.png" /></a>
-            <a href="#sectionportfolio"><img class="anchorbottom" alt="" src="assets/anchors/bottomtestimonials.png" /></a>
-        </div>
+	<div class="grid_12 titlesection">
+        <h1>Cake Design</h1>
     </div>
-    <!--end anchors-->
-    
-    <!--start dark filter-->
-	<div id="darkfilter">	
-        
-        <!--start container-->
-        <div class="container clearfix">
-        
-            <!--top quote-->
-            <div class="grid_12 topquote">
-                <img alt="" src="assets/section-testimonials/topquote.png" />
-            </div>	
-            <!--top quote-->
-            
-            <!--left testimonial-->
-            <div class="grid_6 lefttestimonials">
-                <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut neque nulla. Nulla aliquam dictum arcu.</h2> <!--you can edit-->
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut neque nulla. Nulla aliquam dictum arcu, eget bibendum diam dapibus a. Maecenas lectus felis, pharetra sit amet dictum quis, semper eu nibh. Praesent placerat massa ut justo gravida placerat. Phasellus. Praesent placerat massa ut justo gravida placerat semper eu nibh.</p> <!--you can edit-->
-            </div>
-            <!--end left testimonial-->
-            
-            <!--right testimonial-->
-            <div class="grid_6 righttestimonials">
-                <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut neque nulla. Nulla aliquam dictum arcu.</h2> <!--you can edit-->
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse ut neque nulla. Nulla aliquam dictum arcu, eget bibendum diam dapibus a. Maecenas lectus felis, pharetra sit amet dictum quis, semper eu nibh. Praesent placerat massa ut justo gravida placerat. Phasellus. Praesent placerat massa ut justo gravida placerat semper eu nibh.</p> <!--you can edit-->
-            </div>
-            <!--right testimonial-->	
-            
-            <!--bottom quote-->
-            <div class="grid_12 bottomquote">
-                <img alt="" src="assets/section-testimonials/bottomquote.png" />
-            </div>
-            <!--bottom quote-->
-        
-        </div>
-        <!--end container--> 
-    
-    </div>
-    <!--end dark filter-->
-      
+
 </section>
 
-
-<section id="oursocial">
-	
- 	<!--start anchors-->
-    <div class="anchors">
-    	<div class="contanchors">
-            <a href="#sectionskills"><img class="anchortop" alt="" src="assets/anchors/topsocial.png" /></a>
-            <a href="#contacts"><img class="anchorbottom" alt="" src="assets/anchors/bottomsocial.png" /></a>
-        </div>
-    </div>
-    <!--end anchors-->
-    
-    <!--start container-->
-    <div class="container clearfix">
-    
-    	<!--start titlesection-->
-        <div class="grid_12 titlesection">
-        	<h1>Follow Us</h1>
-        </div>
-        <!--end title section-->
-        
-        <!--start social icons-->
-        <div class="grid_2" style="padding-left:400px;">
-        	<a target="_new" href="https://www.facebook.com/pages/Peace-Love-Cakes/185137724919338">
-            	<img class="rotate" alt="" src="assets/section-oursocial/facebook.png"> <!--you can edit image and insert the link-->
-           	</a>
-        </div>
-        <div class="grid_2">
-        	<a target="_new" href="https://twitter.com/PeaceLoveCakes">
-            	<img class="rotate" alt="" src="assets/section-oursocial/twitter.png"> <!--you can edit image and insert the link-->
-          	</a>
-        </div>
-        <!--end social icons-->
-    
-    </div>
-    <!--end container-->   
-    
-</section>
 <!--end contacts-->	<!--Start js-->    
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> <!--Jquery-->
 	<script src="https://maps.googleapis.com/maps/api/js?sensor=true"></script> <!-- Google Map API -->
     <script src="js/jquery.isotope.min.js"></script> <!--isotope-->
-    <script src="assets/jquery.themepunch.plugins.min.js"></script> <!--revolution slider-->
-    <script src="assets/jquery.themepunch.revolution.min.js"></script> <!--revolution slider-->
+    <script src="../assets/jquery.themepunch.plugins.min.js"></script> <!--revolution slider-->
+    <script src="../assets/jquery.themepunch.revolution.min.js"></script> <!--revolution slider-->
     <script src="js/jquery.prettyPhoto.js"></script> <!--pretty photo-->
     <script src="js/scroolto.js"></script> <!--Scrool To--> 
     <script src="js/settings.js"></script> <!--My settings-->
